# UHU-mainnet

./: .gitignore  Cargo.toml  README.md  app.py  config.py  dashboard.py  faucet.py  start_uhu.sh  uhu.sh
src/: main.rs
static/css/: style.css
templates/: developers.html  ecosystem.html  explorer.html  get_uhu.html  index.html  layout.html  marketplace.html  roadmap.html  tokenomics.html  trading_bot.html  whitepaper.html  why_uhu.html
uhu-pulse/uhu-scan/: app.py
uhu-pulse/uhu-scan/static/css/: style.css
uhu-pulse/uhu-scan/templates/: ai_assistant.html  coin_detail.html  index.html  projects.html  scan.html  tokenize.html
uhu_db/: db  snap.0000000000000DCC
