[package]
name = "uhu-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["full", "rlp"] }
alloy-primitives = "0.7"
alloy-eips = "0.1"
jsonrpsee = { version = "0.22", features = ["server", "macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
sled = "0.34.7"
